# iRon

./: .gitignore  .gitmodules  CMakeLists.txt  Overlay.cpp  OverlayDDU.h  OverlayInputs.h  OverlayRadar.h  OverlayRelative.h  OverlayStandings.h  OverlayTires.h  OverlayTurnNumber.h  TelemetryHandler.cpp  TelemetryHandler.h  compile_commands.json  iracing.cpp  iracing.h  iron.vcxproj  iron.vcxproj.filters  main.cpp
.github/workflows/: msbuild.yml
irsdk/: irsdk_client.cpp  irsdk_diskclient.cpp  irsdk_diskclient.h
